gitflow-feature-stash: ex2